ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelo-ingress
  namespace: travelo
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: travelo-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: travelo-backend-service
            port:
              number: 8080
